@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.16 2005/04/04 22:05:29 reinoud Exp $
+$NetBSD: distinfo,v 1.17 2005/04/10 00:42:49 reinoud Exp $
 
-SHA1 (UDFclient.0.3.4.tgz) = bbc15d69f5320f3ded206a8740c7eda50cb4767f
-RMD160 (UDFclient.0.3.4.tgz) = a62277ac451448c8b1970ced7e4e7833895f7be4
-Size (UDFclient.0.3.4.tgz) = 188648 bytes
+SHA1 (UDFclient.0.3.5.tgz) = e18afc0270b3e362593ac1df1692a69f707ecc80
+RMD160 (UDFclient.0.3.5.tgz) = e9df99db9a256ed63c554c0da8e7ed4480eca056
+Size (UDFclient.0.3.5.tgz) = 189644 bytes
